deploy/master/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ci-purger
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - k8s-ci.lb.itskoko.io
      secretName: k8s-ci.lb.itskoko.io
  rules:
    - host: k8s-ci.lb.itskoko.io
      http:
        paths:
          - backend:
              serviceName: k8s-ci-purger
              servicePort: 80
